--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ img{
 .meat{
   font-family:Georgia;
   font-size:18px;
+  background-color:white;
+  border-style:solid;
+  padding:10px 10px 10px 10px;
 }
-
 
